# deeplearning_labs

lab1/: CMakeLists.txt
lab1/src/: main.cpp
lab1/src/lib/: DataSet.cpp  DataSet.h  Layer.cpp  Layer.h  Layer.hpp  NeuralNetwork.cpp  NeuralNetwork.h  Tensor.h
